Fix overflow - cannot scroll horizontally
Fix overflow
- cannot scroll horizontally
- remove overflowX - html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 html {
     font-size: 2vw;
     /* 1px = 50/1920 rem */
+    overflow-x: hidden;
 }
 
 body
@@ -18,16 +19,13 @@ body
     /* font-family: 'Mulish'; */
     font-family: 'Muli Regular';
     font-weight: 300;
-    position: relative;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
-    margin: 0;
+    margin: 0 auto;
     min-width: 1280px;
     max-width: 1920px;
-    margin-left: auto;
-    margin-right: auto;
-    /* overflow: hidden; */
+    position: relative;
+    overflow: hidden;
 }
 
 button {
@@ -760,6 +758,7 @@ footer {
     color: #ffffff;
     place-content: center;
     height: 98px;
+    width: 100%;
 }
 
 footer .footer-icon-container {
@@ -797,7 +796,7 @@ footer .footer-title {
 /* Responsive < 1280, 1281 - 1919, > 1920 */
 
 /* Smaller or equal to 1280 */
-@media only screen and ( max-width: 1280px ) {
+@media screen and ( max-width: 1280px ) {
     /* navigation-bar */
     .navbar {
         margin-bottom: 54.6px;
